<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBgColor">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_slideViewPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nextApp"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center|right"
        android:paddingEnd="@dimen/_30sdp"
        android:text="@string/next"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/skipApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/skipApp"
        app:layout_constraintTop_toTopOf="@+id/skipApp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/skipApp"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center|left"
        android:paddingStart="@dimen/_30sdp"
        android:text="@string/skip"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_slideViewPager"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <FrameLayout
        android:id="@+id/nativeExitAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@drawable/round_btn_ads"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.2"
        android:text="@string/ad"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/nativeExitAd"
        app:layout_constraintEnd_toEndOf="@+id/nativeExitAd"
        app:layout_constraintStart_toStartOf="@+id/nativeExitAd"
        app:layout_constraintTop_toTopOf="@+id/nativeExitAd" />


</androidx.constraintlayout.widget.ConstraintLayout>